# auto-rust

./: .env  .gitignore  Cargo.toml  README.md
auto/: Cargo.toml
auto/src/: api.rs  cache.rs  data.rs  lib.rs
examples/: basic.rs  complex.rs  email_checker.rs  next_rust.rs  over_process.rs  pi.rs  quine.rs  simple.rs  with_context.rs
examples/server/: Cargo.toml
examples/server/src/: main.rs
src/: api.rs  generator.rs  lib.rs
tools/cargo-self/: Cargo.toml
tools/cargo-self/.self/: constitution.md
tools/cargo-self/.self/src/: main.rs.self
tools/cargo-self/src/: main.rs
