[package]
name = "auto-rust"
version = "0.1.2"
edition = "2021"
description = "A tool to automatically generate Rust code at compile time."
license = "MIT AND Apache-2.0"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
syn = { version = "2.0.37", features = ["full"] }
