[package]
name = "auto-rust"
version = "0.1.3"
edition = "2021"
description = "A tool to automatically generate Rust code using LLMs at compilation time."
license = "MIT AND Apache-2.0"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
syn = { version = "2.0.39", features = ["full"] }
