[package]
name = "auto-rust"
version = "0.1.4"
edition = "2021"
description = "A tool to automatically generate Rust code using LLMs at compilation time."
license = "MIT AND Apache-2.0"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
hyperpolyglot = "0.1.7"
ignore = "0.4.22"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
syn = { version = "2.0.66", features = ["full"] }
