[lib]
proc-macro = true

[package]
name = "auto_rust"
version = "0.1.5"
edition = "2021"
description = "A tool to automatically generate Rust code using LLMs at compilation time."
license = "MIT AND Apache-2.0"

[dependencies]
dotenv = "0.15.0"
hyperpolyglot = "0.1.7"
ignore = "0.4.22"
md5 = "0.7.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
syn = { version = "2.0.66", features = ["full"] }
